# opssl

./: .gitignore  README.md  meson.build  meson.options
compat/: libop-config.h  libop_config.h  libop_stubs.c  op_memory.h
doc/: cbs-api.txt  cert-api.txt  conn-api.txt  crypto-api.txt  ctx-api.txt  dtls-api.txt  err-api.txt  ktls-api.txt  platform-api.txt  types-api.txt
include/opssl/: cbs.h  cert.h  conn.h  crypto.h  ctx.h  dtls.h  err.h  ktls.h  opssl.h  platform.h  types.h
src/: ctx.c  err.c  init.c
src/crypto/: aes.c  aes_ccm.c  aes_gcm.c  aes_ni.c  argon2id.c  bignum.c  bignum_internal.h  blake2b.c  camellia.c  cbs.c  chacha20.c  chacha20_poly1305.c  constant_time.c  cpuid.c  dh.c  ecc.c  ed25519.c  hkdf.c  hmac.c  mldsa.c  mlkem.c  pbkdf2.c  platform.c  poly1305.c  poly1305_internal.h  random.c  rsa.c  sha1.c  sha256.c  sha256_ni.c  sha3.c  sha512.c  sha_internal.h  x25519.c
src/io/: bio.c  export.c
src/tls/: ciphersuite.c  dtls.c  extensions.c  handshake.c  keysched.c  ktls.c  record.c  tls12.c  tls13.c
src/x509/: asn1.c  asn1_internal.h  cert.c  chain.c  fingerprint.c  pem.c  pkey.c  trust_store.c
subprojects/: libop
tests/: meson.build  test_crypto.c  test_mlkem_debug.c  test_tls.c  test_x509.c
tests/certs/: ca-cert.pem  ca-cert.srl  ca-key.pem  leaf-cert.pem  leaf-csr.pem  leaf-key.pem  server-ed25519-cert.pem  server-ed25519-key.pem
tools/: opssl.c  opssl_cli_minimal.c
